--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,149 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+  font-family: 'Abel', sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: rgba(221, 198, 198, 0.5);
+}
+button {
+  border: none;
+  margin: 2px;
+}
+code {
+  font-family: 'Abel', sans-serif;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.App {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  margin-top: 10px;
+  margin-left: 0;
+  margin-right: 0;
+  border: 0;
+}
+.header {
+  display: flex;
+  justify-content: center;
+  margin: 0%;
+}
+.header-grid{
+  display: flex;
+  justify-content: center;
+  margin: 0;
+  flex-wrap: wrap;
+  margin-top: 10px;
+  margin-left: 0;
+  margin-right: 0;
+  border: 0;
+}
+.descripsion{
+  display: flex;
+  flex-direction: column;
+  justify-content: center; 
+  max-width: fit-content;
+ }
+.text {
+  display: flex;
+  flex: auto;
+  flex-wrap: wrap;
+  text-align: center;
+}
+.photo {
+display: flex;
+width: 350px;
+flex-direction: column;
+height: 100vh;
+margin-top: 10px;
+margin-left: 0;
+margin-right: 0;
+border: 0;
+}
+@media(max-width: 850px){
+ .photo-lips {
+     width: 250px;
+     height: 100vh;
+    }
+    .photo {
+      display: none;
+    }
+    .descripsion{
+         min-width: fit-content;
+     }
+}
+.photo-lips {
+  display: flex;
+  width: 345px;
+  margin-top: 10px;
+  margin-left: 0;
+  margin-right: 0;
+  border: 0;
+}
+.part {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+  /* flex-wrap: wrap; */
+}
+.main-block {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 0;
+  margin-left: 0;
+  margin-right: 0;
+  border: 0;
+  line-height: 0px;
+}
+.block {
+  background-color: rgba(255, 255, 255, 0.5);
+  padding: 20px;
+  display: flex;
+  /* flex-direction: column; */
+  flex: 1;
+  flex-wrap: wrap;
+  margin-left: 10px;
+  line-height: 1;
+
+    }
+.product {
+  display: flex;
+  width: 1040px;
+  justify-content: space-evenly;
+  flex-wrap: wrap;
+  position: relative;
+  }
+  .box {
+        text-align: center;
+        border-radius: 5px;
+        box-shadow: 0px 30px 40px -20px ;
+        padding: 30px;
+        margin: 20px; 
+        max-width: 200px;
+        max-height: min-content;
+        flex-direction: column;
+        margin: 0 auto;
+        line-height: 1;
+        position: relative;
+ }
+
+.categoryButton:hover {
+  background-color: rgba(226, 68, 68, 0.5);
+  cursor: pointer;
+  margin: 5px;
+  padding: 5px;
+  border: none;
+  text-transform:uppercase;
+}
+.categoryButton {
+  text-transform:uppercase;
+}
+.categoryButtonSelected {
+  cursor: pointer;
+  margin: 5px;
+  padding: 5px;
+  background-color: rgb(190, 218, 190);
+  border: none;
+  text-transform:uppercase;
 }
