--- a/src/index.css
+++ b/src/index.css
@@ -88,7 +88,7 @@ border: 0;
   margin: 0;
   /* flex-wrap: wrap; */
 }
-.main-block {
+.mainBlock {
   display: flex;
   justify-content: space-around;
   flex-wrap: wrap;
@@ -115,12 +115,7 @@ border: 0;
   justify-content: center;
   flex: 1;
   flex-wrap: wrap;
-  /* display: flex;
-  width: min-content;
-  flex-direction: row;
-  justify-content: center;
-  flex-wrap: wrap; */
-  /* position: relative; */
+ 
   }
   .box {
         text-align: center;
@@ -202,5 +197,4 @@ border: 0;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
  border: .5px #E1BEE7 solid;
 }
-
 
