--- a/src/index.css
+++ b/src/index.css
@@ -188,7 +188,7 @@ border: 0;
 	padding-top: 100px;
 
   height: 300px;   
-	width: max-content;
+	width: 300px;
 
   color: white;
 	overflow: auto;
