--- a/src/index.css
+++ b/src/index.css
@@ -183,11 +183,11 @@ border: 0;
   font-family: 'Abel', sans-serif;
 }
 .modal {
-	position: fixed;
+	/* position: fixed; */
 	z-index: 1;
 	padding-top: 100px;
 
-  height: 300px;   
+  height: 100px;   
 	width: 300px;
 
   color: white;
